* Avoid systematic `MessageNotWriteableException` error logging, now only visible in `debug` - {pull}1715[#1715] and {pull}1730[#1730]
* Fix rounded number format for non-english locales - {pull}1728[#1728]
* Fix `NullPointerException` on legacy Apache client instrumentation when host is `null` - {pull}1746[#1746]
* Apply consistent proxy class exclusion heuristic - {pull}1738[#1738]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.22.0]]
==== 1.22.0 - 2021/03/24

[float]
===== Breaking changes
* Dots in metric names of Micrometer metrics get replaced with underscores to avoid mapping conflicts.
De-dotting be disabled via <<config-dedot-custom-metrics, `dedot_custom_metrics`>>. - {pull}1700[#1700]

[float]
===== Features
* Introducing a new mechanism to ease the development of community instrumentation plugins. See <<config-plugins-dir>> for
more details. This configuration was already added in 1.18.0, but more extensive and continuous integration testing
allows us to expose it now. It is still marked as "experimental" though, meaning that future changes in the mechanism
may break early contributed plugins. However, we highly encourage our community to try it out and we will do our best
to assist with such efforts.
* Deprecating `ignore_user_agents` in favour of `transaction_ignore_user_agents`, maintaining the same functionality -
{pull}1644[#1644]
* Update existing Hibernate Search 6 instrumentation to the final relase
* The <<config-use-path-as-transaction-name, `use_path_as_transaction_name`>> option is now dynamic
* Flushing internal and micrometer metrics before the agent shuts down - {pull}1658[#1658]
* Support for OkHttp 4.4+ -  {pull}1672[#1672]
* Adding capability to automatically create ECS-JSON-formatted version of the original application log files, through
the <<config-log-ecs-reformatting>> config option. This allows effortless ingestion of logs to Elasticsearch without