@@ -24,7 +24,6 @@
  */
 package co.elastic.apm.agent.mongoclient;
 
-import co.elastic.apm.agent.bci.VisibleForAdvice;
 import co.elastic.apm.agent.impl.GlobalTracer;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Span;
@@ -41,12 +40,11 @@ import javax.annotation.Nullable;
 
 public class ConnectionAdvice {
 
-    @VisibleForAdvice
     public static final Logger logger = LoggerFactory.getLogger(ConnectionAdvice.class);
 
     @Nullable
-    @Advice.OnMethodEnter(suppress = Throwable.class)
-    public static Span onEnter(@Advice.This Connection thiz,
+    @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
+    public static Object onEnter(@Advice.This Connection thiz,
                                @Advice.Argument(0) Object databaseOrMongoNamespace,
                                @Advice.Argument(1) BsonDocument command) {
         Span span = null;
@@ -113,9 +111,10 @@ public class ConnectionAdvice {
         return span;
     }
 
-    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class)
-    public static void onExit(@Nullable @Advice.Enter Span span, @Advice.Thrown Throwable thrown, @Advice.Origin("#m") String methodName) {
-        if (span != null) {
+    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class, inline = false)
+    public static void onExit(@Nullable @Advice.Enter Object spanObj, @Advice.Thrown Throwable thrown, @Advice.Origin("#m") String methodName) {
+        if (spanObj instanceof Span) {
+            Span span = (Span) spanObj;
             span.deactivate().captureException(thrown);
             if (!methodName.endsWith("Async")) {
                 span.end();
