@@ -69,8 +69,8 @@ public class ConnectionInstrumentation extends MongoClientInstrumentation {
     }
 
     @Nullable
-    @Advice.OnMethodEnter(suppress = Throwable.class)
-    public static Span onEnter(@Advice.This Connection thiz,
+    @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
+    public static Object onEnter(@Advice.This Connection thiz,
                                @Advice.Argument(0) MongoNamespace namespace,
                                @Advice.Origin("#m") String methodName) {
         Span span = null;
@@ -109,9 +109,10 @@ public class ConnectionInstrumentation extends MongoClientInstrumentation {
         return span;
     }
 
-    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class)
-    public static void onExit(@Nullable @Advice.Enter Span span, @Advice.Thrown Throwable thrown) {
-        if (span != null) {
+    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class, inline = false)
+    public static void onExit(@Nullable @Advice.Enter Object spanObj, @Advice.Thrown Throwable thrown) {
+        if (spanObj instanceof Span) {
+            Span span = (Span) spanObj;
             span.deactivate().captureException(thrown);
             span.end();
         }
